# zcmds

./: .cursorrules  .gitignore  .pylintrc  CLAUDE.md  FIX_TYPING.md  MANIFEST.in  NOTES.md  README.md  activate.sh  bump.py  clean  eero_connection_test  fileutils.py  index_all_files.py  install  install.py  lint  lint.sh  make_venv.py  obs_movieconverter.py  pyproject.toml  requirements.testing.txt  requirements.txt  search_and_replace  search_in_files  setup.py  setupvirtualenv.py  task.md  test  test_net_connection  tox.ini  upload_package.sh
.claude/: settings.local.json
.github/workflows/: lint.yml  push_macos.yml  push_pylint.yml  push_tox.yml  push_ubuntu.yml  push_ubuntu_tox.yml  push_win.yml
productivity_cmds/: file_search_and_replacer.py  fileutils.py  version.py  win32_path_manip.py
productivity_cmds/cmds/common/: audit_disk.py  search_and_replace.py  search_in_files.py  shrink.py  update.py  zcmds.py
productivity_cmds/cmds/darwin/: test_net_connection.py
productivity_cmds/install/win32/: update.py
pysrc/cmds/common/: 2mp3.py  mkv2mp4.py  movie_chop.py  pdf2png.py  search_and_replace.py  search_in_files.py  shrink.py  stereo2mono.py  stripaudio.py  update.py  vidclip.py  vidframes.py  ytclip.py  ytcut.py  zcmd.py  zcmds.py
pysrc/cmds/macos/: _update.py  test_net_connection.py
pysrc/cmds/win64/: _path_manip.py  _update.py  open.bat
pysrc/src/: file_search_and_replacer.py  file_searcher.py  fileutils.py  index_all_files.py  obs_movieconverter.py
src/zcmds/: __init__.py  cmds.py  cmds.txt  get_cmds.py  version.py
src/zcmds/cmds/: bindings.json.py
src/zcmds/cmds/common/: aicode.py  archive.py  askai.py  audnorm.py  codeup.py  comports.py  diskaudit.py  docker_purge.py  findfiles.py  fixinternet.py  geninvoice.py  git_diff.py  gitconfig.py  gitsummary.py  grh.py  img2vid.py  img2webp.py  imgai.py  imgcrop.py  imgshrink.py  inputimeout.py  lint.py  losslesscut.py  merge_to.py  mergeto.py  myip.py  new.py  obs_organize.py  open.py  openaicfg.py  pdf2png.py  pdf2txt.py  printenv.py  pull.py  push.py  removebackground.py  say.py  search_and_replace.py  search_in_files.py  sharedir.py  (+29 more)
src/zcmds/cmds/darwin/: test_net_connection.py
src/zcmds/install/darwin/: darwin_update.py
src/zcmds/util/: _gpt4all.py  chatgpt.py  config.py  editor.py  file_search_and_replacer.py  file_searcher.py  fileutils.py  find_bash.py  find_file_in_parents.py  index_all_files.py  process.py  prompt_input.py  say.py  sound.py  streaming_console.py  streaming_console_markdown.py
tests/: test_codeup.py  test_codeup_aicommit.py  test_findfiles.py  test_main.py  test_process.py  test_sound.py  test_streaming_console.py  test_streaming_console_markdown.py  test_version.py
tests/test_data/: rembg-nobackground.webm
zcmds/: index_all_files.py  paths.py  version.py  win32_path_manip.py
zcmds/cmds/: bindings.json.py
zcmds/cmds/common/: README.md  audit_disk.py  audnorm.py  bindings.json.py  mkv2mp4.py  movie_chop.py  obs_organize.py  pdf2png.py  search_and_replace.py  search_in_files.py  sharedir.py  stereo2mono.py  stripaudio.py  update.py  vid2gif.py  vid2jpg.py  vid2mp3.py  vid2mp4.py  vid2webm.py  vidclip.py  viddur.py  vidhero.py  vidlist.py  vidmatrix.py  vidshrink.py  vidspeed.py  vidvol.py  vidwebmaster.py  zcmds.py
zcmds/cmds/darwin/: macOS_key_bindings.dict  test_net_connection.py
zcmds/cmds/linux/: TODO
zcmds/cmds/win32/: _exec.py  cat.bat  cat.py  cp.bat  cp.py  du.bat  du.py  git-bash.py  git_bash.py  grep.bat  grep.py  home.bat  home.py  ls.bat  ls.py  mv.bat  mv.py  open.bat  open.py  rm.bat  rm.py  touch.py  unzip.py  which.bat  which.py
zcmds/install/: update.py
zcmds/install/darwin/: darwin_update.py  update.py
zcmds/install/linux/: linux_update.py  update.py
zcmds/install/win32/: update.py  win32_update.py
zcmds/util/: file_search_and_replacer.py  file_searcher.py  fileutils.py  win32_path_manip.py  zcmds_main.py
