[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "zcmds"
description = "Cross platform(ish) productivity commands written in python."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["zcmds"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["dependencies", "scripts", "entry-points", "version"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "zcmds.__version__" }

[tool.mypy]
ignore_missing_imports = true
