[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "zcmds"
description = "Cross platform(ish) productivity commands written in python."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["zcmds"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version", "scripts"]
dependencies = [
    "ytclip",
    "pdf2image",
    "ffmpeg-normalize",
    "appdirs",
    "PyQt6",
    "PyPDF2",
    "jsoncomment",
    "pyserial",
    "openai>=1.3.7",
    "anthropic>=0.21.0",
    "consolemd",
    "inputimeout",
    "download",
    "playaudio>=1.0.5",
    "gTTS",
    "py7zr",
    "static-ffmpeg>=2.5",
    "zcmds_win32>=1.2.12; platform_system=='Windows'",
    "static-sox",
    "json5",
    "pipx",
    "GitPython",
    "transcribe-anything>=2.7.27",
    "send2trash",
    "magic-wormhole",
    "wormhole-tx",
    "pillow-heif",
    "advanced-aicode>=1.1.0",
    "advanced-askai",
    "pywinpty; platform_system=='Windows'",
    "codeup>=1.0.1",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = { attr = "zcmds.__version__" }

[dependency-groups]
test = [
    "mypy",
    "pytest",
    "black",
    "wheel",
    "ruff",
    "isort",
]

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.mypy]
ignore_missing_imports = true
